--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -63,3 +63,32 @@ swiftmailer:
     username:  %mailer_user%
     password:  %mailer_password%
     spool:     { type: memory }
+
+knp_menu:
+    twig:
+        template: SimpleBlogSiteBundle:Menu:knp_menu.html.twig
+
+mopa_bootstrap:
+    form:
+        error_type: block # or inline which is default
+        render_required_asterisk: true
+        render_optional_text: false
+
+fos_user:
+    db_driver: orm
+    firewall_name: main
+    user_class: SimpleBlog\UserBundle\Entity\User
+    group:
+        group_class: SimpleBlog\UserBundle\Entity\Group
+
+vich_uploader:
+    db_driver: orm
+    mappings:
+        blog_image:
+            uri_prefix: /images/blog
+            upload_destination: %kernel.root_dir%/../web/images/blog
+
+services:
+    twig_extension.intl:
+        class: Twig_Extensions_Extension_Intl
+        tags: [{ name: 'twig.extension' }]
