--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,17 @@
         "sensio/distribution-bundle": "2.3.*",
         "sensio/generator-bundle": "2.3.*",
         "incenteev/composer-parameter-handler": "~2.0",
+        "friendsofsymfony/user-bundle": "~2.0@dev",
+        "mopa/bootstrap-bundle": "dev-master",
+        "knplabs/knp-gaufrette-bundle" : "v0.1.4",
+        "knplabs/knp-menu-bundle": "v2.0.0-alpha1",
+        "stof/doctrine-extensions-bundle": "dev-master",
+        "ornicar/gravatar-bundle" : "dev-master",
+        "avalanche123/imagine-bundle": "dev-master",
+        "vich/uploader-bundle": "dev-master",
+        "dropbox-php/dropbox-php": "dev-master",
+        "sonata-project/intl-bundle": "dev-master",
+        "white-october/pagerfanta-bundle": "dev-master",
         "smart-core/html-bundle": "dev-master"
     },
     "scripts": {
