Ошибок не наблюдается. Стартовая точка для разработки

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -24,6 +24,12 @@ framework:
 twig:
     debug:            %kernel.debug%
     strict_variables: %kernel.debug%
+    globals:
+        html: @html
+        pagerfanta_opts:
+            previous_message: '&laquo;'
+            next_message:     '&raquo;'
+            dots_message:     ' … '
 
 # Assetic Configuration
 assetic:
