--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -72,7 +72,7 @@ swiftmailer:
 
 knp_menu:
     twig:
-        template: SimpleBlogSiteBundle:Menu:knp_menu.html.twig
+        template: DmitxeSiteBundle:Menu:knp_menu.html.twig
 
 mopa_bootstrap:
     form:
@@ -83,9 +83,9 @@ mopa_bootstrap:
 fos_user:
     db_driver: orm
     firewall_name: main
-    user_class: SimpleBlog\UserBundle\Entity\User
+    user_class: Dmitxe\UserBundle\Entity\User
     group:
-        group_class: SimpleBlog\UserBundle\Entity\Group
+        group_class: Dmitxe\UserBundle\Entity\Group
 
 vich_uploader:
     db_driver: orm
