--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,18 +1,19 @@
-acme_hello:
-    resource: "@AcmeHelloBundle/Resources/config/routing.yml"
+dmitxe_demo:
+    resource: "@DmitxeDemoBundle/Resources/config/routing.yml"
     prefix:   /
+
 smart_media:
     resource: "@SmartMediaBundle/Resources/config/routing.yml"
     prefix:   /
 
-simpleblog_site:
-    resource: "@SimpleBlogSiteBundle/Resources/config/routing.yml"
+dmitxe_site:
+    resource: "@DmitxeSiteBundle/Resources/config/routing.yml"
     prefix:   /
 
-simpleblog_blog:
-    resource: "@SimpleBlogBlogBundle/Resources/config/routing.yml"
+dmitxe_blog:
+    resource: "@DmitxeBlogBundle/Resources/config/routing.yml"
     prefix:   /blog/
 
-simpleblog_user:
-    resource: "@SimpleBlogUserBundle/Resources/config/routing.yml"
+dmitxe_user:
+    resource: "@DmitxeUserBundle/Resources/config/routing.yml"
     prefix:   /
