Исправил мелочи. Подключение TinymceBundle - ошибка ининциализации.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -98,3 +98,7 @@ services:
     twig_extension.intl:
         class: Twig_Extensions_Extension_Intl
         tags: [{ name: 'twig.extension' }]
+
+stfalcon_tinymce:
+    mode: "textareas"
+    theme: "advanced"
