--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -3,60 +3,60 @@ imports:
     - { resource: security.yml }
 
 framework:
-    #esi:             ~
-    translator:      { fallback: %locale% }
-    secret:          %secret%
+    #esi: ~
+    translator: { fallback: %locale% }
+    secret: %secret%
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
         strict_requirements: ~
-    form:            ~
+    form: ~
     csrf_protection: ~
-    validation:      { enable_annotations: true }
+    validation: { enable_annotations: true }
     templating:
         engines: ['twig']
         #assets_version: SomeVersionScheme
-    default_locale:  "%locale%"
+    default_locale: "%locale%"
     trusted_proxies: ~
-    session:         ~
-    fragments:       ~
+    session: ~
+    fragments: ~
 
 # Twig Configuration
 twig:
-    debug:            %kernel.debug%
+    debug: %kernel.debug%
     strict_variables: %kernel.debug%
     globals:
         html: @html
         pagerfanta_opts:
             previous_message: '&laquo;'
-            next_message:     '&raquo;'
-            dots_message:     ' … '
+            next_message: '&raquo;'
+            dots_message: ' … '
 
 # Assetic Configuration
 assetic:
-    debug:          %kernel.debug%
+    debug: %kernel.debug%
     use_controller: false
-    bundles:        [ ]
+    bundles: [ ]
     #java: /usr/bin/java
     filters:
         cssrewrite: ~
         #closure:
-        #    jar: %kernel.root_dir%/Resources/java/compiler.jar
+        # jar: %kernel.root_dir%/Resources/java/compiler.jar
         #yui_css:
-        #    jar: %kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar
+        # jar: %kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar
 
 # Doctrine Configuration
 doctrine:
     dbal:
-        driver:   %database_driver%
-        host:     %database_host%
-        port:     %database_port%
-        dbname:   %database_name%
-        user:     %database_user%
+        driver: %database_driver%
+        host: %database_host%
+        port: %database_port%
+        dbname: %database_name%
+        user: %database_user%
         password: %database_password%
-        charset:  UTF8
+        charset: UTF8
         # if using pdo_sqlite as your database driver, add the path in parameters.yml
         # e.g. database_path: %kernel.root_dir%/data/data.db3
-        # path:     %database_path%
+        # path: %database_path%
 
     orm:
         auto_generate_proxy_classes: %kernel.debug%
@@ -65,10 +65,10 @@ doctrine:
 # Swiftmailer Configuration
 swiftmailer:
     transport: %mailer_transport%
-    host:      %mailer_host%
-    username:  %mailer_user%
-    password:  %mailer_password%
-    spool:     { type: memory }
+    host: %mailer_host%
+    username: %mailer_user%
+    password: %mailer_password%
+    spool: { type: memory }
 
 knp_menu:
     twig:
@@ -87,6 +87,16 @@ fos_user:
     group:
         group_class: Dmitxe\UserBundle\Entity\Group
 
+stfalcon_tinymce:
+    include_jquery: true
+    tinymce_jquery: true
+    selector: ".tinymce"
+    language: %locale%
+    theme:
+        simple:
+            theme: "modern"
+
+
 vich_uploader:
     db_driver: orm
     mappings:
@@ -98,7 +108,3 @@ services:
     twig_extension.intl:
         class: Twig_Extensions_Extension_Intl
         tags: [{ name: 'twig.extension' }]
-
-stfalcon_tinymce:
-    mode: "textareas"
-    theme: "advanced"
