--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -2,9 +2,9 @@ parameters:
     database_driver:   pdo_mysql
     database_host:     127.0.0.1
     database_port:     ~
-    database_name:     symfony
-    database_user:     root
-    database_password: ~
+    database_name:     dmitxe_blog
+    database_user:     dmitxe_blog
+    database_password: 123
 
     mailer_transport:  smtp
     mailer_host:       127.0.0.1
