--- a/src/SmartCore/Bundle/BlogBundle/Resources/config/routing.yml
+++ b/src/SmartCore/Bundle/BlogBundle/Resources/config/routing.yml
@@ -8,7 +8,7 @@ smart_blog_article:
 
 smart_blog_article_new:
     path: /new/
-    defaults: { _controller: SmartBlogBundle:Article:new }
+    defaults: { _controller: SmartBlogBundle:Article:create }
 
 smart_blog_article_edit:
     path: /edit/{id}/
