Подключение TinyMce (скрипт и переопределение полей в формах)

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -94,6 +94,15 @@ stfalcon_tinymce:
     theme:
         simple:
             theme: 'modern'
+        advanced:
+             plugins:
+                 - "advlist autolink lists link image charmap print preview hr anchor pagebreak"
+                 - "searchreplace wordcount visualblocks visualchars code fullscreen"
+                 - "insertdatetime media nonbreaking save table contextmenu directionality"
+                 - "emoticons template paste textcolor"
+             toolbar1: "insertfile undo redo | styleselect | bold italic | fontselect fontsizeselect | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link image"
+             toolbar2: "print preview media | forecolor backcolor emoticons | stfalcon | example"
+             image_advtab: true
 
 vich_uploader:
     db_driver: orm
