Мелочи - поставил защиту на создание новой записи в блоге

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -2,8 +2,8 @@ parameters:
     database_driver:   pdo_mysql
     database_host:     127.0.0.1
     database_port:     ~
-    database_name:     simple_blog
-    database_user:     simple_blog
+    database_name:     dmitxe_symfony_blog
+    database_user:     dmitxe_symfony_blog
     database_password: 123
 
     mailer_transport:  smtp
