--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -35,7 +35,7 @@ twig:
 assetic:
     debug: %kernel.debug%
     use_controller: false
-    bundles: [ ]
+    bundles:        [FMElfinderBundle]
     #java: /usr/bin/java
     filters:
         cssrewrite: ~
@@ -89,22 +89,42 @@ fos_user:
 stfalcon_tinymce:
     include_jquery: false
     tinymce_jquery: true
-    selector: '.tinymce'
+#    selector: '.tinymce'
+    textarea_class: 'tinymce'
     language: %locale%
     theme:
-        simple:
-            theme: 'modern'
-            file_browser_callback : 'elFinderBrowser'
+#        simple:
+#            theme: 'modern'
+#            file_browser_callback : 'elFinderBrowser'
         advanced:
+                file_browser_callback : 'elFinderBrowser'
+                theme: "advanced"
+                plugins: "pagebreak,style,layer,table,save,advhr,advimage,advlink,emotions,iespell,inlinepopups,insertdatetime,preview,media,searchreplace,print,contextmenu,paste,directionality,fullscreen,noneditable,visualchars,nonbreaking,xhtmlxtras,template"
+                theme_advanced_buttons1: "save,newdocument,|,bold,italic,underline,strikethrough,|,justifyleft,justifycenter,justifyright,justifyfull,styleselect,formatselect,fontselect,fontsizeselect"
+                theme_advanced_buttons2: "cut,copy,paste,pastetext,pasteword,|,search,replace,|,bullist,numlist,|,outdent,indent,blockquote,|,undo,redo,|,link,unlink,anchor,image,cleanup,help,code,|,insertdate,inserttime,preview,|,forecolor,backcolor"
+                theme_advanced_buttons3: "tablecontrols,|,hr,removeformat,visualaid,|,sub,sup,|,charmap,emotions,iespell,media,advhr,|,print,|,ltr,rtl,|,fullscreen"
+                theme_advanced_buttons4: "insertlayer,moveforward,movebackward,absolute,|,styleprops,|,cite,abbr,acronym,del,ins,attribs,|,visualchars,nonbreaking,template,pagebreak"
+                theme_advanced_toolbar_location: "top"
+                theme_advanced_toolbar_align: "left"
+                theme_advanced_statusbar_location: "bottom"
+                theme_advanced_resizing: true
+                theme_advanced_resizing_use_cookie: true
+                theme_advanced_resize_horizontal: false
+                force_br_newlines : false
+                forced_root_block : ""
+                convert_urls : false
+                relative_urls: false
+                width: "100%"
+        advanced4:
             file_browser_callback : 'elFinderBrowser'
-            plugins:
-                 - "advlist autolink lists link image charmap print preview hr anchor pagebreak"
-                 - "searchreplace wordcount visualblocks visualchars code fullscreen"
-                 - "insertdatetime media nonbreaking save table contextmenu directionality"
-                 - "emoticons template paste textcolor"
-            toolbar1: "insertfile undo redo | styleselect | bold italic | fontselect fontsizeselect | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link image"
-            toolbar2: "print preview media | forecolor backcolor emoticons | stfalcon | example"
-            image_advtab: true
+#            plugins:
+#                 - "advlist autolink lists link image charmap print preview hr anchor pagebreak"
+#                 - "searchreplace wordcount visualblocks visualchars code fullscreen"
+#                 - "insertdatetime media nonbreaking save table contextmenu directionality"
+#                 - "emoticons template paste textcolor"
+#            toolbar1: "insertfile undo redo | styleselect | bold italic | fontselect fontsizeselect | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link image"
+#            toolbar2: "print preview media | forecolor backcolor emoticons | stfalcon | example"
+            #image_advtab: true
 
 fm_elfinder:
     locale: %locale%
