Рефакторинг шаблонов и облако тэгов.

--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,9 @@
         "white-october/pagerfanta-bundle": "dev-master",
         "smart-core/html-bundle": "dev-master",
         "stfalcon/tinymce-bundle": "0.2.1",
-        "helios-ag/fm-elfinder-bundle": "1.2"
+        "helios-ag/fm-elfinder-bundle": "1.2",
+        "zendframework/zend-servicemanager": "2.2.*",
+        "zendframework/zend-tag": "2.2.*"
     },
     "scripts": {
         "post-install-cmd": [
