--- a/src/SmartCore/Bundle/BlogBundle/Resources/config/services.yml
+++ b/src/SmartCore/Bundle/BlogBundle/Resources/config/services.yml
@@ -10,6 +10,7 @@ services:
         arguments:
             - @smart_blog.article.repository
             - @smart_blog.tag.repository
+            - @router
             - %smart_blog.items_per_page%
 
     smart_blog.article.form:
