рабочий прототип категорий.

--- a/src/SmartCore/Bundle/BlogBundle/Resources/config/routing.yml
+++ b/src/SmartCore/Bundle/BlogBundle/Resources/config/routing.yml
@@ -26,7 +26,11 @@ smart_blog_page:
 
 smart_blog_category:
     path: /category/{slug}/
-    defaults: { _controller: SmartBlogBundle:Default:index }
+    defaults:
+        _controller: SmartBlogBundle:Category:index
+        slug: ""
+    requirements:
+        slug: ".+"
 
 #smart_blog_category_page:
 #    path: /category/{slug}/page/{page_num}/
