--- a/src/SmartCore/Bundle/BlogBundle/Resources/config/services.yml
+++ b/src/SmartCore/Bundle/BlogBundle/Resources/config/services.yml
@@ -13,6 +13,14 @@ services:
             - @router
             - %smart_blog.items_per_page%
 
+    smart_blog.category:
+        class: SmartCore\Bundle\BlogBundle\Service\CategoryService
+        arguments:
+#            - @smart_blog.article.repository
+#            - @smart_blog.tag.repository
+#            - @router
+#            - %smart_blog.items_per_page%
+
     smart_blog.article.form:
         class: SmartCore\Bundle\BlogBundle\Form\Type\ArticleFormType
         arguments: [%smart_blog.model.article.class%]
