--- a/src/Dmitxe/SiteBundle/Resources/config/routing.yml
+++ b/src/Dmitxe/SiteBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
 dmitxe_site_index:
     path: /
     defaults: { _controller: DmitxeSiteBundle:Page:index }
+
+dmitxe_site_admin:
+    path: /admin/
+    defaults: { _controller: DmitxeSiteBundle:Admin:index }
