--- a/src/SmartCore/Bundle/BlogBundle/Resources/config/services.yml
+++ b/src/SmartCore/Bundle/BlogBundle/Resources/config/services.yml
@@ -2,7 +2,9 @@ services:
     smart_blog.article:
         class: SmartCore\Bundle\BlogBundle\Service\ArticleService
         arguments:
+            - @doctrine.orm.default_entity_manager
             - @smart_blog.article.repository
+            - @event_dispatcher
             - %smart_blog.items_per_page%
 
     smart_blog.tag:
