--- a/src/SmartCore/Bundle/BlogBundle/Resources/config/routing_admin_tag.yml
+++ b/src/SmartCore/Bundle/BlogBundle/Resources/config/routing_admin_tag.yml
@@ -3,11 +3,11 @@ smart_blog_admin_tag:
     defaults: { _controller: SmartBlogBundle:Admin/Tag:index }
 
 smart_blog_admin_tag_edit:
-    path: /{id}/
+    path: /edit/{id}/
     defaults: { _controller: SmartBlogBundle:Admin/Tag:edit }
     requirements:
         id: \d+
 
-#smart_blog_admin_tag_create:
-#    path: /create/
-#    defaults: { _controller: SmartBlogBundle:Admin/Article:create }
+smart_blog_admin_tag_create:
+    path: /create/
+    defaults: { _controller: SmartBlogBundle:Admin/Tag:create }
