Наработки по формам и шаблонам.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -90,7 +90,8 @@ stfalcon_tinymce:
     include_jquery: false
     tinymce_jquery: true
 #    selector: '.tinymce'
-    textarea_class: 'tinymce'
+#    textarea_class: 'tinymce'
+    textarea_class: 'wysiwyg'
     language: %locale%
     theme:
 #        simple:
